--- a/Mybatis-Study/Mybatis-01/pom.xml
+++ b/Mybatis-Study/Mybatis-01/pom.xml
@@ -39,5 +39,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
     </dependencies>
 </project>
